--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,10 @@
 backports.shutil-get-terminal-size==1.0.0
 decorator==4.1.2
 Django==1.8.14
+django-registration-redux==1.8
 djangorestframework==3.6.3
 enum34==1.1.6
+ipdb==0.10.3
 ipython==5.5.0
 ipython-genutils==0.2.0
 pathlib2==2.3.0
